# sneakers-ml

./: .dockerignore  .dvcignore  .env.dist  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  data.dvc  docker-compose.local.yml  docker-compose.yml  project-setup.md  pyproject.toml  requirements.txt  run-app.sh  temp.py  temp2.html
.dvc/: config
.github/: dependabot.yml
.github/workflows/: build-api.yml  build-bot.yml  codecov.yaml  codeql.yml  docker-app-build.yml  docker-bot-build.yml  docker-build.yml  docker-publish-api.yml  docker-publish-bot.yml  docker-publish.yml  hadolint.yml  poetry.yml  pre-commit.yaml
config/: config.yaml  mlconfig.dev.yml  mlconfig.prod.yml
config/data/: brands_classification.yaml  brands_classification_filtered.yaml  default.yaml
config/feature/: hog.yaml  resnet152.yaml
config/features/: hog.yaml  resnet152.yaml  sift.yaml
config/metrics/: accuracy.yaml  f1_macro.yaml  f1_micro.yaml  f1_weighted.yaml
config/models/: catboost.yaml  decision_tree.yaml  log_reg.yaml  random_forest.yaml  sgd.yaml  svm.yaml
config/paths/: default.yaml
data/: .gitignore  features.dvc  models.dvc
data/features/: .gitignore  brands-classification-filtered.dvc  brands-classification-splits.dvc  brands-classification.dvc  hog.dvc  resnet.dvc
data/highsnobiety/: highsnobiety.csv
data/merged/: images.dvc  metadata.dvc
data/models/: .gitignore  brands-classification-filtered.dvc  brands-classification.dvc
data/raw/: .gitignore  images.dvc  metadata.csv  metadata.dvc
data/raw/sneakerbaas/: metadata.csv
data/raw/sneakerbaas/category-kids/: metadata.csv
data/raw/sneakerbaas/category-men/: metadata.csv
data/raw/superkicks/: metadata.csv
data/sneakerbaas/: metadata.csv
data/sneakerbaas/category-kids/: metadata.csv
data/sneakerbaas/category-men/: metadata.csv
data/sneakerbaas/category-unisex/: metadata.csv
data/sneakerbaas/category-women/: metadata.csv
data/superkicks/: metadata.csv
data/superkicks/men-basketball-sneakers/: metadata.csv
data/superkicks/men-classics-sneakers/: metadata.csv
data/superkicks/men-skateboard-sneakers/: metadata.csv
data/superkicks/men-sneakers/: metadata.csv
data/superkicks/women-basketball-sneakers/: metadata.csv
data/superkicks/women-classics-sneakers/: metadata.csv
data/superkicks/women-skateboard-sneakers/: metadata.csv
data/superkicks/women-sneakers/: metadata.csv
data/training/: .gitignore  brands-classification-filtered-splits.dvc  brands-classification-filtered.dvc  brands-classification-full.dvc  brands-classification-splits.dvc  brands-classification.dvc
deploy/app/: Dockerfile  Dockerfile.base  dvc_setup.sh  setup.sh
deploy/bot/: Dockerfile
docker/bot/: Dockerfile
notebooks/: collab_splitter.ipynb  footshop.ipynb  highsnobiety.ipynb  merger.ipynb  sneakerbass.ipynb  superkicks-parser.ipynb  superkicks.ipynb
notebooks/eda/: basic-eda.ipynb  hog-embedding-eda.ipynb  resnet-embedding-eda.ipynb  sift-embedding-eda .ipynb
notebooks/features/: HOG.ipynb  SIFT.ipynb  SIFT2.ipynb  resnet152.ipynb
notebooks/merger/: collab_splitter.ipynb  color_words.txt  merger.ipynb  rename_path.ipynb
notebooks/models/: baseline.ipynb  hog_simple_models.ipynb  hog_svm.ipynb  predict.ipynb  resnet_fine_tune.ipynb  resnet_fine_tune_filtered.ipynb  resnet_simple_models.ipynb  sift_simple_models.ipynb  sklearn_resnet.ipynb
notebooks/parser/: footshop.ipynb  highsnobiety_kickscrew.ipynb  sneakerbass.ipynb  superkicks.ipynb
notes/: data.md  eda-merging.md  features-models.md  project-setup.md  sneakerbaas.md  superkicks.md
parser/: helper.py  sneaker-parser.ipynb  sneakerbass.ipynb
parser/sneakerbaas/: metadata.csv
sneakers_ml/: utils.py
sneakers_ml/api/: __main__.py
sneakers_ml/api/configs/: database.py  environment.py
sneakers_ml/api/models/: base.py  image.py  user.py
sneakers_ml/api/repositories/: image.py  user.py
sneakers_ml/app/: config.py  main.py
sneakers_ml/app/handlers/: __init__.py  brand_classify.py  classify_brand.py  common.py
sneakers_ml/app/models/: brand_classify.py
sneakers_ml/app/routers/: classification.py  common.py
sneakers_ml/bot/: .env.example  Dockerfile  Makefile  __main__.py  bot.py  brand_predictor.py  config.py  dispatcher.py  docker-compose.yml  factories.py  image.py  logger.py  main.py  runners.py  settings.py
sneakers_ml/bot/controller/: common.py  image.py  test_common.py  test_image.py
sneakers_ml/bot/filters/: __init__.py  image.py  magic_data.py
sneakers_ml/bot/loggers/: __init__.py  multiline.py
sneakers_ml/bot/middlewares/: __init__.py
sneakers_ml/bot/ml/: __init__.py  brand_predictor.py
sneakers_ml/bot/models/: base.py  user.py
sneakers_ml/bot/test/: test_general.py
sneakers_ml/bot/utils/: escape.py  test_escape.py  timer.py
sneakers_ml/data/: base.py  base_parser.py  data_preview.py  footshop.py  image.py  local.py  merger.py  s3.py  sneakerbaas.py  split.py  storage.py  superkicks.py
sneakers_ml/data/merger/: column.py  dataframe.py  merger.py
sneakers_ml/data/parser/: base_parser.py  footshop.py  sneakerbaas.py  superkicks.py
sneakers_ml/data/storage/: image.py  local.py  s3.py  storage.py
sneakers_ml/data/test/: conftest.py  test_data_preview.py  test_s3.py
sneakers_ml/features/: __init__.py  base.py  extractor.py  features.py  hog.py  resnet152.py  sift.py
sneakers_ml/models/: OLD_test_brand_classifier.py  onnx.py  onnx_utils.py  predict.py  resnet152_lightning_draft.py  test_predict.py  train.py
sneakers_ml/models/brand_classifier/: __init__.py  brand_classifier.py
sneakers_ml/models/old_code_brand_classifier/: __init__.py  test_brand_classifier.py
src/data/: base.py  base_parser.py  base_parser_sync.py  data_preview.py  footshop.py  helper.py  image.py  local.py  merger.py  s3.py  sneakerbaas.py  storage.py  superkicks.py  test.py  test_s3.py
src/data/test/: conftest.py  test_data_preview.py
src/features/: resnet152.py
src/parser/: highsnobiety.ipynb
src/parser/highsnobiety/: metadata.csv
(+108 files in other folders)
