[tool.poetry]
name = "sneakers-ml"
version = "0.1.0"
description = ""
authors = ["MIEM"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.1"
tqdm = "^4.66.1"
requests = "^2.31.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
boto3 = "^1.33.8"
fake-useragent = "^1.4.0"
beautifulsoup4 = "^4.12.2"
pillow = "^10.1.0"
seaborn = "^0.13.0"
pandarallel = "^1.6.5"
loguru = "^0.7.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
jupyterlab = "^4.0.9"
umap-learn = "^0.5.5"
scikit-learn = "^1.3.2"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"
scikit-image = "^0.22.0"
algoliasearch = "^3.0.0"
split-folders = "^0.5.1"
skl2onnx = "^1.16.0"
onnxruntime = "^1.16.3"
catboost = "^1.2.2"
ipywidgets = "^8.1.1"
wandb = "^0.16.2"

[tool.poetry.group.dev.dependencies]
dvc = { extras = ["gdrive", "s3"], version = "^3.37.0" }
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
flake8-pyproject = "^1.2.3"
autoflake = "^2.2.1"
pyupgrade = "^3.15.0"
nbqa = "^1.7.1"
bandit = { extras = ["toml"], version = "^1.7.6" }
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[tool.poetry.group.vscode]
optional = true

[tool.poetry.group.vscode.dependencies]
mypy = "^1.8.0"
pylint = "^3.0.3"
ruff = "^0.1.11"
pandas-stubs = "^2.1.4.231227"
types-pillow = "^10.1.0.20240106"
types-beautifulsoup4 = "^4.12.0.20240106"
types-tqdm = "^4.66.0.20240106"

[tool.black]
# skip-string-normalization = true
line-length = 120
target-version = ["py39"]
# skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 120
float_to_top = true

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
recursive = true
expand-star-imports = true
in-place = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"

[tool.ruff]
select = ["ALL"]
ignore = ["D", "ANN101", "RUF012", "ANN102", "COM812", "FA100"]
target-version = "py39"
line-length = 120

[tool.mypy]
python_version = "3.9"
strict = true
show_error_context = true
pretty = true
ignore_missing_imports = true

[tool.pylint]
py-version = "3.9"
max-line-length = 120
disable = ["C0116", "C0114", "C0115", "W1514"]

[tool.bandit]
exclude_dirs = ["sneakers_ml/data/test"]
skips = ["B403", "B301"]                         # to-do - remove pickle and switch to onnx

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
