[tool.poetry]
name = "sneakers-ml"
version = "0.1.1"
description = ""
authors = ["MIEM"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
# top libs
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.12.0"
# onnx stuff
onnxscript = "^0.1.0.dev20240224"
onnxruntime = "^1.16.3"
onnx = "^1.15.0"
skl2onnx = "^1.16.0"
# ml libs
catboost = "^1.2.2"
scikit-learn = "^1.3.2"
scikit-image = "^0.22.0"
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
# torch stuff
torch = "^2.1.1"
torchvision = "^0.16.1"
torcheval = "^0.0.7"
lightning = "^2.2.0.post0"
# configs and logging
wandb = "^0.16.2"
hydra-core = "^1.3.2"
loguru = "^0.7.2"

[tool.poetry.group.data-eda]
optional = true

[tool.poetry.group.data-eda.dependencies]
# jupyter
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.9"
# parsing stuff
algoliasearch = "^3.0.0"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.4.0"
requests = "^2.31.0"
# data cleaning
split-folders = "^0.5.1"
pandarallel = "^1.6.5"
tqdm = "^4.66.1"
# visualizations
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
umap-learn = "^0.5.5"

[tool.poetry.group.bot]
optional = true

[tool.poetry.group.bot.dependencies]
aiohttp = "^3.9.1"
python-telegram-bot = "^21.0"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
boto3 = "^1.34.69"
fastapi = "^0.110.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
redis = "^5.0.3"
uvicorn = "^0.28.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# linting and formatting
pre-commit = "^3.6.2"
pyupgrade = "^3.15.1"
autoflake = "^2.3.0"
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
flake8-pyproject = "^1.2.3"
nbqa = "^1.7.1"
bandit = { extras = ["toml"], version = "^1.7.7" }
# vscode highlighting
mypy = "^1.8.0"
pylint = "^3.0.3"
ruff = "^0.3.2"
# stubs for mypy type checking
pandas-stubs = "^2.2.0.240218"
types-pillow = "^10.2.0.20240213"
types-beautifulsoup4 = "^4.12.0.20240106"
types-tqdm = "^4.66.0.20240106"
# tests
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
recursive = true
expand-star-imports = true
in-place = true

[tool.isort]
profile = "black"
line_length = 120
float_to_top = true
known_third_party = ["wandb"]

[tool.black]
line-length = 120
target-version = ["py39"]
# skip-string-normalization = true
# skip-magic-trailing-comma = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203" # Whitespace before ':' for black compatability

[tool.ruff]
target-version = "py39"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # documentation
    "ANN101", # annotationg self in class methods, will be deprecated
    "RUF012", # mutable class attributes type checking
    "ANN102", # annotationg cls in class methods, will be deprecated
    "COM812", # missing-trailing-comma
    "FA100",  # future-annotations
    "NPY002", # numpy random stuff
]

[tool.mypy]
python_version = "3.9"
strict = true
show_error_context = true
pretty = true
ignore_missing_imports = true # ignore packages without type-checking

[tool.pylint]
py-version = "3.9"
max-line-length = 120
disable = [
    "C0116", # documentation
    "C0114", # documentation
    "C0115", # documentation
]

[tool.bandit]
exclude_dirs = ["sneakers_ml/data/test"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pytest]
addopts = [
    "--ignore=data",
    "--ignore=notebooks",
    "--ignore=notes",
    "--ignore=docker",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
